<resources>
    <string name="app_name">EspressoTestApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_text_string">Welcome to Espresso test. This is an Espresso test application with Page Object Pattern.</string>
    <string name="btn_name_list">List</string>
    <string name="btn_name_image">Details</string>
    <string name="btn_name_exit">Exit</string>
    <string name="login_txt_hint_username">User Name</string>
    <string name="et_password_txt">Password</string>
    <string name="btn_login_txt">Login</string>
    <string name="tv_espresso_detail_screen">The Espresso API encourages test authors to think in terms of what a user might do while interacting with the application - locating UI elements and interacting with them. At the same time, the framework prevents direct access to activities and views of the application because holding on to these objects and operating on them off the UI thread is a major source of test flakiness.</string>
</resources>
